--- a/styles/base.css
+++ b/styles/base.css
@@ -7,19 +7,30 @@ body {
 header {
     background-color: #1e4e6d;
     color: white;
-    padding: 1em;
+    padding: 0.5em;
+    text-align: center;
 }
 h1 {
     margin: 0;
 }
+h2{
+    text-align: center;
+}
+h3{
+    text-align: center;
+    border: 20px;
+}
 nav {
     background-color: #333;
     padding: 0.5em;
+    text-align: center;
+  
 }
 nav a {
     color: white;
     text-decoration: none;
     padding: 0.5em 1em;
+    text-align: center;
 }
 main {
     display: flex;
@@ -27,21 +38,25 @@ main {
 }
 #content {
     flex: 2;
-    margin-right: 1em;
+    margin: 1em;
 }
 #web-dev-resources {
     flex: 1;
     background-color: #f0f0f0;
     padding: 1em;
 }
-.section {
+.card{
+    display: grid;
     background-color: #fff;
     border: 1px solid #ddd;
     margin-bottom: 1em;
-    padding: 1em;
+    
 }
-img {
-    max-width: 100%;
+.card img {
+    max-width: 20%;
+    float: right;
+    margin-left: 1em;
+    
 }
 footer {
     background-color: #1e4e6d;
