--- a/styles/base.css
+++ b/styles/base.css
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@300;400&display=swap');
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Poppins', sans-serif;
+}
+
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;;
     margin: 0;
     padding: 0;
     background-color: #f0f0f0;
@@ -23,6 +30,11 @@ nav a {
     text-decoration: none;
     padding: 0 10px;
 }
+
+nav a:hover{
+    border: #ffd700;
+}
+
 main {
     display: flex;
     justify-content: space-between;
@@ -80,9 +92,12 @@ h2 {
     flex: 2;
 }
 
-#resources {
+#resources h2 {
     flex: 1;
+    text-align: center;
+   
 }
+
 footer {
     background-color: #1e4e6d;
     color: white;
