--- a/styles/base.css
+++ b/styles/base.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@300;400&display=swap');
 
 body {
-    font-family: 'Roboto', sans-serif;;
+    font-family: 'Roboto';
     margin-left:500px;
     margin-right: 200px;
     margin-top: auto;
@@ -39,7 +39,7 @@ nav {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Poppins;
+    font-family: 'Poppins';
 }
 
 h1 {
