--- a/styles/temples.css
+++ b/styles/temples.css
@@ -12,53 +12,40 @@ header {
     background-color: #4a0e4e;
     color: white;
     gap: 1300px;
-    padding-left: 10px;
-  
-    
+    padding-left: 10px; 
 }
 
 nav {
-    margin-top: 1rem;
-    
+    margin-top: 1rem;   
 }
-
 #hamburger {
     background: none;
     border: none;
     color: white;
     font-size: 1.5rem;
     cursor: pointer;
- 
 }
-
 #nav-menu {
     display: flex;
     list-style-type: none;
     padding: 0;
     justify-items: end;
-    gap: 35px;
-  
-    
+    gap: 35px;    
 }
-
 #nav-menu.show {
     display: flex;
     flex-direction: column;
 }
-
 #nav-menu li {
     margin: 0.5rem 0;
 }
-
 #nav-menu a {
     color: white;
-    text-decoration: none;
-    
+    text-decoration: none;   
 }
 #nav-menu a:hover {
     text-decoration: underline;
 }
-
 main {
     max-width: 1200px;
     margin: 0 auto;
@@ -72,21 +59,26 @@ h2{
 
 .temple-grid {
     display: grid;
-    grid-template-columns: repeat(1, 1fr); /* 1 column for mobile view */
-    gap: 16px; /* Space between grid items */
-    padding: 16px; /* Padding around the gallery */
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    padding: 20px;
+    
 }
 
 figure {
-    margin: 0;
-    background-color: white;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    width: 100%; /* or set a specific width */
+    height: 100%; /* or set a specific height */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
-img {
-    width: 100%;
+figure img {
+    max-width: 100%;
     height: auto;
-    object-fit: fill;
+    object-fit: cover;
+    aspect-ratio: 3/2;
 }
 
 figcaption {
