--- a/styles/temples.css
+++ b/styles/temples.css
@@ -59,7 +59,8 @@ h2{
 
 .temple-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(3, 1fr);
+    /*grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));*/
     gap: 20px;
     padding: 20px;
     
