--- a/styles/temples.css
+++ b/styles/temples.css
@@ -28,6 +28,7 @@ body {
     color: white;
     text-decoration: none;
     font-size: 16px;
+    display: none;
 }
 .nav a:hover {
     background-color: rgb(184, 219, 57);
