--- a/styles/temples.css
+++ b/styles/temples.css
@@ -27,7 +27,7 @@ body {
     color: white;
     text-decoration: none;
     font-size: 16px;
-    display: none;
+  
 }
 .nav a:hover {
     background-color: rgb(184, 219, 57);
@@ -46,7 +46,7 @@ h2{
 
 .temple-grid {
     display: grid;
-    grid-template-columns: repeat(1fr 1fr 1fr);
+    grid-template-columns: repeat(3, 1fr);
     /*grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));*/
     gap: 20px;
     padding: 20px;
