--- a/styles/temples.css
+++ b/styles/temples.css
@@ -80,3 +80,15 @@ footer {
     margin-top: 2rem;
     bottom: 0;
 }
+
+@media (max-width: 480px) {
+  .header {
+    padding: 15px;
+  }
+  .nav {
+    gap: 5px;
+  }
+  figure img {
+    aspect-ratio: 1/1;
+  }
+}
