--- a/styles/temples.css
+++ b/styles/temples.css
@@ -98,6 +98,9 @@ footer {
     display: block;
     cursor: pointer;
   }
+  .nav li {
+    display: block;
+  }
   .temple-grid {
     grid-template-columns: repeat(2, 1fr);
   }
