--- a/styles/place.css
+++ b/styles/place.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: rgb(182, 41, 182);
+    --primary-color: rgba(0, 255, 140, 0.849);
     --secondary-color: #00a86b;
     --text-color: #333;
     --background-color: #f4f4f4;
@@ -18,7 +18,7 @@ header {
     background-color: var(--primary-color);
     color: white;
     text-align: center;
-    padding: 1rem;
+    padding: 0.5rem;
 }
 
 main {
@@ -32,19 +32,20 @@ main {
 
 .data, .weather {
     margin-top: 1rem;
+    text-align: center;
 }
 
 h2 {
     color: var(--secondary-color);
+    text-align: center;
 }
 
 footer {
     background-color: var(--primary-color);
     color: white;
     text-align: center;
-    padding: 1rem;
-    margin-top: 1rem;
-    bottom: 0;
+    padding: 0.5rem;
+    margin-top: 0.5rem;
 }
 
 @media screen and (min-width: 768px) {
