--- a/styles/place.css
+++ b/styles/place.css
@@ -1,7 +1,7 @@
 :root {
-    --primary-color: rgba(255, 0, 55, 0.849);
-    --secondary-color: #00a86b;
-    --text-color: #333;
+    --primary-color: blue;
+    --secondary-color: #2400a8;
+    --text-color:black;
     --background-color: #f4f4f4;
 }
 
@@ -64,3 +64,11 @@ footer {
         margin-left: 0.5rem;
     }
 }
+/*
+@media screen and ( max-width:100%)  {
+    .weather , .data{
+        display:overlay ;
+    }
+    
+}
+*/
