--- a/styles/place.css
+++ b/styles/place.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@300;400&display=swap');
 :root {
     --primary-color: blue;
     --secondary-color: #2400a8;
@@ -6,7 +7,7 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Roboto";
     line-height: 1.6;
     color: var(--text-color);
     background-color: var(--background-color);
@@ -36,6 +37,7 @@ main {
 }
 
 h2 {
+    font-family: "Roboto";
     color: var(--secondary-color);
     text-align: center;
 }
