--- a/styles/form.css
+++ b/styles/form.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@300;400&display=swap');
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto';
   background-color: whitesmoke;
   width: 30%;
   margin-left: 35%;
