--- a/project/styles/project.css
+++ b/project/styles/project.css
@@ -98,13 +98,14 @@ main p {
     color: var(--primary-color);
 }
 
-//* Filter Buttons */
+/* Filter Buttons */
 .filter-container {
     display: flex;
     text-align: center;
     margin: 2rem;
     gap: 7px;
     flex-wrap: wrap; /* Allow buttons to wrap if necessary */
+    justify-content: center; 
 }
 
 .filter-btn {
@@ -116,6 +117,7 @@ main p {
     cursor: pointer;
     border-radius: 5px;
     transition: background-color 0.3s ease;
+    text-align: center;
 }
 
 .filter-btn:hover {
@@ -238,12 +240,24 @@ footer .social-icons a {
         display: block;
     }
     .filter-container {
-        flex-direction: column;
+      display: grid;
+      grid-template-columns: repeat(3,1fr);
     }
 
+    
     .filter-btn {
-        margin: 10px 0; /* Stack filter buttons */
-    }
+        padding: 0.5rem 1rem;
+        margin: 0 20px; /* Keep horizontal margins */
+        background-color: var(--primary-color);
+        color: #fff;
+        border: none;
+        cursor: pointer;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+        text-align: center;
+}
+
+ 
 }
 
 @media (max-width: 576px) {
