--- a/project/styles/index.css
+++ b/project/styles/index.css
@@ -105,14 +105,14 @@ nav {
     font-size: 1.2rem;
     margin-bottom: 2rem;
 }
-.cta-button {
+.cta {
     background:  green; 
     color: #fff;
     padding: 10px 20px;
     border-radius: 5px;
     transition: background 0.3s;
 }
-.cta-button:hover {
+.cta:hover {
     background: green; /* Darker shade on hover */
 }
 /* Services Section */
