--- a/project/styles/index.css
+++ b/project/styles/index.css
@@ -34,7 +34,7 @@ header {
     position: fixed;
     width: 100%;
     z-index: 1000;*
-    height: 12%;
+    height: auto;
     display: grid;
 }
 
