--- a/project/styles/index.css
+++ b/project/styles/index.css
@@ -44,7 +44,7 @@ nav {
     justify-items: center;
     align-items: center;
     padding: 1rem 2rem;
-    grid-template-columns: 1;
+    grid-template-columns: 1fr;
 }
 
 .logo {
