--- a/project/styles/project.css
+++ b/project/styles/project.css
@@ -279,3 +279,23 @@ footer .social-icons a {
         margin-bottom: 2rem;
     }
 }
+
+@media (max-width: 476px) {
+    .project-grid {
+        grid-template-columns: 1fr; /* 1 column on mobile */
+    }
+
+    #projects {
+        text-align: center;
+        padding: 20px;
+        margin: 20px;
+    }
+    
+    h1 {
+        text-align: center;
+        font-size: 2rem;
+        color: var(--primary-color);
+        margin-top: 5rem;
+        margin-bottom: 2rem;
+    }
+}
